memory container support, jmx prometheus exporter #DO-57