@@ -16,8 +16,17 @@ RUN ./gradlew build || return 0
 FROM openjdk:8
 LABEL author="Ibrahim Bilge <Ibrahim.Bilge@opuscapita.com>"
 
+# https://github.com/prometheus/jmx_exporter
+ADD https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/0.14.0/jmx_prometheus_javaagent-0.14.0.jar /opt/jmx_prometheus_javaagent.jar
+COPY jmx_exporter_config.yml /opt/
+RUN chmod 777 /opt/jmx_prometheus_javaagent.jar
+
 ## setting heap size automatically to the container memory limits
-ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+ENV JAVA_OPTS="\
+ -XX:+UseContainerSupport\
+ -XX:MaxRAMPercentage=75.0\
+ -XshowSettings:vm\
+ -javaagent:/opt/jmx_prometheus_javaagent.jar=3068:/opt/jmx_exporter_config.yml"
 
 ENV APP_HOME=/usr/app/
 WORKDIR $APP_HOME
@@ -33,4 +42,5 @@ HEALTHCHECK --interval=15s --timeout=30s --start-period=40s --retries=15 \
   CMD curl --silent --fail http://localhost:3039/api/health/check || exit 1
 
 EXPOSE 3039
+EXPOSE 3068
 ENTRYPOINT exec java $JAVA_OPTS -jar peppol-validator.jar
